Refactored and Added Update functionality

--- a/wellnes-app-backend/pom.xml
+++ b/wellnes-app-backend/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.0.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.myBlog</groupId>
-	<artifactId>WellnessApp</artifactId>
+	<groupId>com.myblog</groupId>
+	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>WellnessApp</name>
+	<name>backend</name>
 	<description>Blog application for Health related Blogs</description>
 	<properties>
 		<java.version>17</java.version>
